# km-crates-publish-test

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  cog.sh  cog.toml  package-lock.json  package.json  project-words.txt  release.config.js  renovate.json
.github/workflows/: build.yml  ci.yml  codeql.yml  lint-commits.yml  prepare-release.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  spellcheck.yml  test-release.yml
examples/: client.rs
src/: lib.rs
